--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "reactcss": "^1.2.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
@@ -77,13 +78,13 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "mongodb-memory-server": "^2.9.3",
-    "nyc": "^11.7.2",
+    "nyc": "^13.3.0",
     "rewire": "^3.0.2",
-    "sinon": "^4.0.2",
+    "sinon": "^7.2.4",
     "sinon-chai": "^2.14.0",
     "sinon-mongoose": "^2.0.2",
     "supertest": "^3.0.0",
-    "watchify": "^3.11.0"
+    "watchify": "^3.11.1"
   },
   "nodemonConfig": {
     "ignore": [
